fix - page gap between components

--- a/frontend/src/Components/ProductDisplay/ProductDisplay.css
+++ b/frontend/src/Components/ProductDisplay/ProductDisplay.css
@@ -1,6 +1,6 @@
 .productdisplay {
     display: flex;
-    margin: 4vh 12vw;
+    margin: 0 12vw;
 }
 
 .productdisplay-left {
