--- a/frontend/src/Components/Reviews/Reviews.css
+++ b/frontend/src/Components/Reviews/Reviews.css
@@ -1,7 +1,7 @@
 .reviews {
     display: flex;
     flex-direction: column;
-    margin: 8vh 24vw;
+    margin: 0 24vw;
     gap: 4vh;
 }
 
@@ -16,11 +16,9 @@
 }
 
 .review-input form {
-    padding: 2vh 0;
     display: flex;
     flex-direction: column;
     gap: 1vh;
-    border-bottom: 1px solid lightgrey;
 }
 
 .review-input form * {
